# PearsonDS

./: DESCRIPTION  MD5  NAMESPACE  NEWS  TODO  configure  configure.ac  configure.win  float_precision.m4
R/: fit.r  matchMoments.R  pearsonIV.r  pearsonV.r  plots.r  zzz.r
inst/: CHANGES  CITATION
man/: Pearson.rd  Pearson0.rd  PearsonDS.rd  PearsonI.Rd  PearsonII.rd  PearsonIII.rd  PearsonIV.rd  PearsonV.rd  PearsonVI.rd  PearsonVII.rd  empMoments.Rd  matchMoments.Rd  pearsonDiagram.Rd  pearsonFitM.Rd  pearsonFitML.Rd  pearsonMSC.Rd  pearsonMoments.Rd
src/: Complex.c  DoubleDouble.c  F21.c  F21DD.c  F21QD.c  QuadDouble.c  config.h  config.h.in  pearson.c  pearson.h  pearsonIV.c
